end-section-two

--- a/section2/main.css
+++ b/section2/main.css
@@ -8,19 +8,10 @@ body {
 }
 
 #product-overview {
-    background: #ff1b68;
+    background: url("freedom.jpg");
     width: 100%;
     height: 528px;
     padding: 10px;
-    /* border: 5px solid black;
-    margin: 10px; */
-    
-    /* margin: 0px; */
-    /* box-sizing: border-box; */
-
-    /* padding: 20px;
-    border: 5px black solid;
-    margin: 20px; */
 }
 
 .section-title {
@@ -32,10 +23,6 @@ body {
     font-family: 'Anton', sans-serif;
 }
 
-/* h1 {
-    font-family: sans-serif;
-} */
-
 .main-header {
     width: 100%;
     background-color: #2ddf5c;
@@ -44,17 +31,21 @@ body {
 
 .main-header > div {
     display: inline-block;
+    vertical-align: middle;
 }
 
 .main-header__brand {
-
+    color: #0e4f1f;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 22px;
 }
 
 .main-nav {
     display: inline-block;
     text-align: right;
-    width: calc(100% - 54px );
-    /*padding: 10px;*/
+    width: calc(100% - 74px );
+    vertical-align: middle;
 }
 
 .main-nav__items {
@@ -65,4 +56,32 @@ body {
 
 .main-nav__item {
     display: inline-block;
+    margin: 0 16px;
+}
+
+.main-nav a {
+    text-decoration: none;
+    color: #0e4f1f;
+    font-weight: bold;
+    padding: 3px 0;
+}
+
+.main-nav__item a:hover,
+.main-nav__item a:active {
+    color: white;
+    border-bottom: 5px solid white;
+}
+
+.main-nav__item--cta a {
+    color: white;
+    background-color: #ff1b68;
+    padding: 8px 16px;
+    border-radius: 8px;
+}
+
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active {
+    color: #ff1b68;
+    background: white;
+    border: none;
 }
